welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:4: error: n is already defined as variable n
  var n = Math.abs(n)
      ^close10:5: error: m is already defined as variable m
  var m = Math.abs(m)
      ^close10:4: error: recursive variable n needs type
  var n = Math.abs(n)
                   ^close10:5: error: recursive variable m needs type
  var m = Math.abs(m)
                   ^