welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
  var n = 10-a
  var m = 10-b
  var n = Math.abs(n)
  var m = Math.abs(m)
  if (n==m){return 0}
  else if (n < m){return a}
  else {return b}}